--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
 
         <p>
-            La muertes una <em>quimera</em>
+            La muerte es una <em>quimera</em>
         </p>
 
         <section id="articulos_science">
